# cpp-design-patterns-structural-4360277

./: CMakeLists.txt
Ch01-Adapter/: CMakeLists.txt
Ch01-Adapter/01_05/end/: CMakeLists.txt  cloud-storage.cpp
