# Minimum CMake version required
cmake_minimum_required(VERSION 3.10)

# Specify the C++ standard (C++17 or higher)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

# Add subdirectories
add_subdirectory(Ch01-Adapter)
# add_subdirectory(Ch02-Bridge)
# add_subdirectory(Ch03-Composite)
# add_subdirectory(Ch04-Decorator)
# add_subdirectory(Ch05-Facade)
# add_subdirectory(Ch06-Flyweight)
# add_subdirectory(Ch07-Proxy)
